# openlambda

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  clang-format.sh
src/: CMakeLists.txt  README.md
src/appframework/: AppConfig.hpp  CMakeLists.txt  Engine.cpp  SystemModule.hpp
src/cl_dll/: CMakeLists.txt  ClientGame.cpp  ClientGame.hpp  EngineFactoryLocal.cpp  GameClientExports.cpp  GameClientExports.hpp  camera.h  cdll_int.cpp  clientdll.cpp  demo.cpp  demo.h  entity.cpp  exports.cpp  hl_weapons.cpp  in_camera.cpp  input.cpp  inputw32.cpp  r_studioint.cpp  tri.cpp  tri.h  view.cpp
src/common/: exports.h
src/dedicated/: CMakeLists.txt  DedicatedExports.cpp  DedicatedExports.h  Engine.cpp  Engine.hpp  EngineHooks.hpp  EngineLegacy.hpp  EngineNext.hpp  IEngineExecMode.hpp  IEngineHooks.hpp  SystemModule.cpp  sys_ded.cpp
src/dedicated/win/: conproc.cpp  conproc.h
src/dlls/: CMakeLists.txt  EngineFactoryLocal.cpp  Game.cpp  Game.hpp  GameClient.cpp  GameClient.hpp  VoiceServer.cpp  VoiceServer.hpp  client.cpp  exports.cpp  gamedll.cpp
src/dlls/hl/monsters/: monster_houndeye.cpp
src/game/: CMakeLists.txt  README.md
src/game/client/: BaseAnimated.cpp  BaseClientGame.cpp  BaseClientGame.hpp  BaseDelay.cpp  BaseEntity.cpp  BaseItem.cpp  BasePlayer.cpp  BaseToggle.cpp  BaseWeapon.cpp  CMakeLists.txt  ClientGame.cpp  ClientGame.hpp  GameWorld.cpp  HUD.cpp  HUD.hpp  HUDAmmo.cpp  HUDAmmo.hpp  HUDAmmoSecondary.cpp  HUDAmmoSecondary.hpp  HUDBattery.cpp  HUDBattery.hpp  HUDBenchmark.cpp  HUDBenchmark.hpp  HUDDeathNotice.cpp  HUDDeathNotice.hpp  HUDElement.hpp  HUDFlashlight.cpp  HUDFlashlight.hpp  HUDGeiger.cpp  HUDGeiger.hpp  HUDHealth.cpp  HUDHealth.hpp  HUDMenu.cpp  HUDMenu.hpp  HUDMessage.cpp  HUDMessage.hpp  HUDSayText.cpp  HUDSayText.hpp  HUDStatusBar.cpp  HUDStatusBar.hpp  (+11 more)
src/game/client/cstrike/: CMakeLists.txt  CSClientGame.cpp  CSClientGame.hpp
src/game/client/hl/: HLClientGame.cpp  HLClientGame.hpp
src/game/client/template/: TemplateClientGame.cpp  TemplateClientGame.hpp
src/game/server/: BaseAmmo.cpp  BaseAmmo.hpp  BaseAnimated.cpp  BaseAnimating.cpp  BaseAnimating.hpp  BaseButton.cpp  BaseButton.hpp  BaseCharacter.cpp  BaseCharacter.hpp  BaseDelay.cpp  BaseDelay.hpp  BaseDoor.cpp  BaseDoor.hpp  BaseEntity.cpp  BaseGame.cpp  BaseGame.hpp  BaseGameRules.cpp  BaseGameRules.hpp  BaseItem.hpp  BaseMonster.cpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BaseToggle.cpp  BaseToggle.hpp  BaseTrigger.cpp  BaseTrigger.hpp  BaseWeapon.cpp  BaseWeapon.hpp  CMakeLists.txt  FlyMonster.hpp  FuncDoor.cpp  FuncDoor.hpp  FuncLadder.cpp  FuncTrain.cpp  FuncWater.cpp  Game.cpp  Game.hpp  GameClientEventListener.cpp  GameClientEventListener.hpp  (+49 more)
src/game/server/ai/: ai_chat.cpp  ai_chat.h  ai_cmd.cpp  ai_cmd.h  ai_dmnet.cpp  ai_dmnet.h  ai_dmq3.cpp  ai_dmq3.h  ai_main.cpp  ai_main.h  ai_team.cpp  ai_team.h  ai_vcmd.cpp  ai_vcmd.h
src/game/server/cstrike/: CSGame.cpp  CSGame.hpp  CSPlayer.cpp  CSPlayer.hpp
src/game/server/hl/: CMakeLists.txt  HLGame.cpp  HLGame.hpp  HLGameRules.cpp  HLGameRules.hpp  HLGameRulesMultiplayer.cpp  HLGameRulesMultiplayer.hpp  HLGameRulesTeamplay.hpp  HLPlayer.cpp  HLPlayer.hpp
src/game/server/quake/: item_cells.cpp  item_healthbox.cpp  item_rockets.cpp  item_shells.cpp  item_spikes.cpp
src/game/server/template/: CMakeLists.txt  TemplateGame.cpp  TemplateGame.hpp  TemplatePlayer.cpp  TemplatePlayer.hpp
src/game/server/unused/: client.cpp  doors.cpp  triggers.cpp  weapons.cpp
src/game/shared/: BaseAnimated.hpp  BaseCharacter.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseEntityComponent.hpp  BasePlayer.hpp  BaseToggle.hpp  CMakeLists.txt  EntityHandle.hpp  InstanceHandle.hpp  LegacyDamageableComponent.hpp  LegacyEntityComponent.hpp  LegacyPhysicsBodyComponent.hpp  PlayerMove.hpp  WeaponInfo.hpp
src/game/shared/cstrike/: WeaponG3SG1.cpp  WeaponHegrenade.cpp  WeaponSG550.cpp  WeaponSG552.cpp  WeaponSmokegrenade.cpp  WeaponTMP.cpp  WeaponUMP45.cpp
src/gameui/: CMakeLists.txt
src/gameui/genta/: GameInfo.cpp  GameInfo.hpp
src/gameui/hla/: CMakeLists.txt  GameConsole.hpp  GameUI.cpp  GameUI.hpp  menu.cpp
src/gameui/null/: CareerUI.cpp  CareerUI.hpp  GameConsole.cpp  GameConsole.hpp  GameUI.cpp  GameUI.hpp
src/gameui/steamera/: BackgroundMenuButton.cpp  BackgroundMenuButton.hpp  BasePanel.hpp  BitmapImagePanel.cpp  BitmapImagePanel.hpp  CMakeLists.txt  CareerUI.cpp  CareerUI.hpp  ChangeGameDialog.cpp  ChangeGameDialog.hpp  CommandCheckButton.cpp  CommandCheckButton.hpp  ContentControlDialog.cpp  ContentControlDialog.hpp  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameBotPage.hpp  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.hpp  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameGameplayPage.hpp  CreateMultiplayerGameServerPage.cpp  CreateMultiplayerGameServerPage.hpp  CvarNegateCheckButton.cpp  CvarNegateCheckButton.hpp  CvarSlider.cpp  CvarSlider.hpp  CvarTextEntry.cpp  CvarTextEntry.hpp  CvarToggleCheckButton.cpp  CvarToggleCheckButton.hpp  DemoEditDialog.cpp  DemoEditDialog.hpp  DemoEventsDialog.cpp  DemoEventsDialog.hpp  DemoPlayerDialog.cpp  DemoPlayerDialog.hpp  DemoPlayerFileDialog.cpp  DemoPlayerFileDialog.hpp  DialogOptionsIngame.cpp  DialogOptionsIngame.hpp  (+55 more)
src/launcher/: AppConfig.hpp  AppExports.cpp  Application.cpp  Application.hpp  CMakeLists.txt  GameApplication.cpp  launcher.cpp
src/launcher/linux/: LinuxApplication.cpp  LinuxApplication.hpp
src/launcher/win/: WinApplication.cpp  WinApplication.hpp
src/next/: CMakeLists.txt  README.md
src/next/dedicated/: CMakeLists.txt  EngineNext.hpp  sys_ded.cpp
src/next/gameui/hla/: Menu.cpp  (+5 more)
src/next/launcher/: AppMain.cpp  Application.cpp  Application.hpp  CMakeLists.txt
src/next/launcher_main/: AppExports.cpp  CMakeLists.txt  launcher.cpp
src/plugins/sample/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.hpp
src/pm_shared/: pm_debug.c  pm_shared.c
src/public/appframework/: Engine.hpp  EngineExecModes.hpp  EngineExportsLegacy.hpp  EngineHooks.hpp  EngineLegacy.hpp  IEngineExecMode.hpp  IEngineExports.hpp  IEngineHooks.hpp
(+57 files in other folders)
